fix: reddit highlight invisible

--- a/public/css/content_script.css
+++ b/public/css/content_script.css
@@ -150,3 +150,7 @@
     flex: 1;
   }
 }
+
+wdautohl-customtag {
+    visibility: visible !important;
+}
